tambahin page baru untuk penjelasan sistem pakar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="background-animate" id="backgroundAnimate"></div>
     <div class="container">
         <div class="card">
+            <div class="info-button" onclick="window.location.href='sistem-pakar.html'">i</div>
             <h2>Kalkulator Kalori Harian</h2>
             <form id="calorieForm">
                 <div class="form-row">
